Fix canvas on iPhone

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -5,6 +5,8 @@
 
 .canvas {
   border-radius: inherit;
+  height: inherit;
   inset: 0;
   position: absolute;
+  width: inherit;
 }
